--- a/app/views/books/_list-b-show.html.erb
+++ b/app/views/books/_list-b-show.html.erb
@@ -1,15 +1,15 @@
-<div>
-	<%= form_for(@book) do |f| %>
+<%= form_for(@book) do |f| %>
 	<!--Alert book版消した-->
-	
-		<div>
-			<h4>Title</h4>
-			<%= f.text_field :title %>
-		</div>
-		<div>
-			<h4>Opinion</h4>
-			<%= f.text_area :body %>
-		</div>
-		<div><%= f.submit "Create Book" %></div>
-	<% end %>
-</div>
+
+	<div class="field row">
+		<label for="book_title">Title</label>
+		<input class="col-xs-12 book_title" type="text" name="book[title]" id="book_title">
+	</div>
+	<div class="field row">
+		<label for="book_opinion">Opinion</label>
+		<textarea class="col-xs-12 book_body" name="book[body]" id="book_body"></textarea>	
+	</div>
+	<div class="actions row">
+    <input type="submit" name="commit" value="Create Book" class="btn btn-primary col-xs-12" data-disable-with="Create Book">
+  </div>
+<% end %>
