--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,43 +1,44 @@
-<!--Alert-->
-<%= render "books/error_messages", book: @book %>
+<div class="body">
+  <div class="container">
+    <div class="row">
 
-<div class="container">
-  <div class="row">
+      <!--Alert-->
+      <%= render "books/error_messages", book: @book %>
 
-    <!-- 部分テンプレート -->
-    <div class="col-xs-3">
-      <h2>User info</h2>
-      <%= render "users/list-u-show", user: current_user %>
-      <h2>New book</h2>
-      <%= render "books/list-b-show", books: @books %>
-    </div>
+      <!-- 部分テンプレート -->
+      <div class="col-xs-3">
+        <h2>User info</h2>
+        <%= render "users/list-u-show", user: current_user %>
+        <h2>New book</h2>
+        <%= render "books/list-b-show", books: @books %>
+      </div>
 
-    <!-- 主 -->
-    <div class="col-xs-9">
-      <h2>Books</h2>
-      <table>
-        <thead>
-          <tr valign = "top">
-          	<th width = "200" height = "20"></th>
-            <th width = "200" height = "20">Title</th>
-            <th width = "400" height = "20">Opinion</th>
-            <th colspan = "3"></th>
-          </tr>
-		</thead>
-        <tbody>
-          <% @books.each do |book| %>
+      <!-- 主 -->
+      <div class="col-xs-9">
+        <h2>Books</h2>
+        <table class="table table-hover table-inverse">
+          <thead>
             <tr>
-              <td>
-                <%= link_to user_path(book.user) do %>
-                  <%= attachment_image_tag book.user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %></td>
-                <% end %>
-              <td><%= link_to book.title, book_path(book.id) %></td>
-              <td><%= book.body %></td>
+              <th></th>
+              <th>Title</th>
+              <th>Opinion</th>
+              <th colspan = "3"></th>
             </tr>
-          <% end %>
-        </tbody>
-      </table>
+          </thead>
+          <tbody>
+            <% @books.each do |book| %>
+              <tr>
+                <td>
+                  <%= link_to user_path(book.user) do %>
+                    <%= attachment_image_tag book.user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %></td>
+                  <% end %>
+                <td><%= link_to book.title, book_path(book.id) %></td>
+                <td><%= book.body %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
     </div>
-
   </div>
 </div>
