--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,23 +1,25 @@
-<div class="container">
-  <div class="row">
+<div class="body">
+  <div class="container">
+    <div class="row">
 
-    <!-- 部分テンプレート -->
-    <div class="col-xs-3">
-      <h2>User info</h2>
-      <%= render "users/list-u-show", user: @user %>
-      <h2>New book</h2>
-      <%= render "books/list-b-show", book: @bookn %>
-    </div>
+      <!-- 部分テンプレート -->
+      <div class="col-xs-3">
+        <h2>User info</h2>
+        <%= render "users/list-u-show", user: @user %>
+        <h2>New book</h2>
+        <%= render "books/list-b-show", book: @bookn %>
+      </div>
 
-    <!-- 主 -->
-    <div class="col-xs-9">
-      <h2>Book detail</h2>
-      <table>
-        <tbody>
+      <!-- 主 -->
+      <div class="col-xs-9">
+        <h2>Book detail</h2>
+        <table class="table">
+          <tbody>
             <tr>
               <td  width = "200" height = "20">
                 <%= link_to user_path(@book.user) do %>
-                  <%= attachment_image_tag @book.user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %><br>
+                  <%= attachment_image_tag @book.user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
+                  <br>
                   <%= @book.user.name %>
                 <% end %>
               </td>
@@ -36,10 +38,9 @@
                 </td>
               <% end %>
             </tr>
-        </tbody>
-      </table>
+          </tbody>
+        </table>
+      </div>
     </div>
-
   </div>
 </div>
-
