--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,28 +1,30 @@
-<section>
+<div class="body">
+  <div class="container">
     <h2>Sign up</h2>
     <div>
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-            <%= devise_error_messages! %>
-            <div>
-                <label>Name</label>
-                <%= f.text_field :name, autofocus: true, class:"form-control", id:"inputEmail"%>
-            </div>
-            <div>
-                <label>Email</label>
-                <%= f.email_field :email, class:"form-control", id:"inputEmail"%>
-            </div>
-            <div>
-                <label>Password</label>
-                <%= f.password_field :password, autocomplete: "off", class:"form-control", id:"inputPassword" %>
-            </div>
-            <div>
-                <label>Password</label>
-                <%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control", id:"inputConfirmPassword" %>
-            </div>
-            <%= f.submit "Sign up" %>
-        <% end %>
-        <div>
-            <%= link_to "Log in", new_user_session_path %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= devise_error_messages! %>
+        <div class="field">
+          <label for="user_name">Name</label><br>
+          <input autofocus="autofocus" class="name" type="text" name="user[name]" id="user_name">
         </div>
+        <div class="field">
+          <label for="user_email">Email</label><br>
+          <input autofocus="autofocus" class="email" type="email" value="" name="user[email]" id="user_email">
+        </div>
+        <div class="field">
+          <label for="user_password">Password</label>
+          <em>(6 characters minimum)</em>
+          <br>
+          <input autocomplete="off" class="password" type="password" name="user[password]" id="user_password">
+        </div>
+        <div class="field">
+          <label for="user_password_confirmation">Password confirmation</label><br>
+          <input autocomplete="off" class="password_confirm" type="password" name="user[password_confirmation]" id="user_password_confirmation">
+        </div>
+          <input type="submit" name="commit" value="Sign up" class="btn btn-success" data-disable-with="Sign up">
+      <% end %>
+      <a class="sign_in" href="/users/sign_in">Log in</a>      
     </div>
-</section>
+  </div>
+</div>
