--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,80 +2,67 @@
 <html>
   <head>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head> 
 
   <body>
-    <header>
-      <nav class="navbar navbar-main navbar-shadow" role="navigation" id="slide-nav">
-        <div class="container relative">
-          <div class="navbar-header">
-            <p class="no-margin" style="font-size: 20px;">
-              Bookers
-              </p>
-   
-            <button class="navbar-toggle" >
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-          </div>
-
-          <div id="slidemenu">
-            <ul class="nav navbar-nav navbar-right">
-	      	  	<% if user_signed_in? %>
+    <!-- header -->
+    <header class="navbar navbar-fixed-top navbar-inverse">
+      <div class="container">
+        <nav class="nav navbar-nav navbar-left">
+          <span class="no-margin" style="font-size: 20px;">
+            Bookers
+          </span>
+        </nav>
+        <nav>
+          <ul class="nav navbar-nav navbar-right">
+            <% if user_signed_in? %>
+            <li>
+            <%= link_to "Home", user_path(current_user.id) %>
+            </li>
+            <li>
+              <%= link_to "Users", users_path %>
+            </li>
+            <li>
+              <%= link_to "Books", books_path %>
+            </li>
+            <li>
+              <%= link_to "logout", destroy_user_session_path, method: :delete %>
+            </li>
+            <% else %>
               <li>
-                <%= link_to "Home", user_path(current_user.id) %>
+                <%= link_to "Home", root_path %>
               </li>
               <li>
-                <%= link_to "Users", users_path %>
+                <%= link_to "About", home_about_path %>
               </li>
               <li>
-                <%= link_to "Books", books_path %>
+                <%= link_to "Sign up", new_user_registration_path %>
               </li>
               <li>
-                <%= link_to "logout", destroy_user_session_path, method: :delete %>
+                <%= link_to "login", new_user_session_path %>
               </li>
-              <% else %>
-                <li>
-                  <%= link_to "Home", root_path %>
-                </li>
-                <li>
-                  <%= link_to "About", home_about_path %>
-                </li>
-                <li>
-                  <%= link_to "Sign up", new_user_registration_path %>
-                </li>
-                <li>
-                  <%= link_to "login", new_user_session_path %>
-                </li>
-              <% end %>
-            </ul>
-          </div>
-        </div>
-      </nav>
+            <% end %>
+          </ul>
+        </nav>
+      </div>>  
     </header>
 
+    <!-- notice -->
     <%= render 'layouts/notification' %>
+    
     <%= yield %>
-
-
-   <footer class="footer style-2">
+    
+    <!-- footer -->
+    <footer>
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
-            <div class="col">
-              <p class="no-margin" style="font-size: 11px;">
-              CopyRigth Infratop.inc
-              </p>
-            </div>
+          <div class="col-xs-3 col-xs-offset-9">
+            <p>CopyRigth Infratop.inc</p>
           </div>
         </div>
       </div>
     </footer>
-    
   </body>
 </html>
