--- a/app/views/users/_list-u-show.html.erb
+++ b/app/views/users/_list-u-show.html.erb
@@ -1,20 +1,17 @@
-<div class="profile-container">
-	<%= attachment_image_tag user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
+<%= attachment_image_tag user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
 
-	<table>
-		<tbody>
-			<tr>
-				<th width = "100" height = "20">name</th>
-				<th width = "100" height = "20"><%= user.name %></th>
-			</tr>
-			<tr>
-				<th width = "100" height = "20">introduction</th>
-				<th width = "100" height = "20"><%= user.introduction %></th>
-			</tr>
-		</tbody>
-	</table>
-
-    
-    <p><%= link_to "プロフィール編集", edit_user_path(current_user), class: "pull-right" %></p>
-    
+<table class="table">
+	<tbody>
+		<tr>
+			<th>name</th>
+			<th><%= user.name %></th>
+		</tr>
+		<tr>
+			<th>introduction</th>
+			<th><%= user.introduction %></th>
+		</tr>
+	</tbody>
+</table>
+<div class="row">
+	<p><%= link_to "プロフィール編集", edit_user_path(current_user), class: "pull-right" %></p>
 </div>
