--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,7 +10,7 @@
         <h2>User info</h2>
         <%= render "users/list-u-show", user: current_user %>
         <h2>New book</h2>
-        <%= render "books/list-b-show", books: @books %>
+        <%= render "books/list-b-show", book: @book %>
       </div>
 
       <!-- 主 -->
