--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,28 +1,34 @@
 <div class="body">
   <div class="container">
     <div class="row">
-			<h1>Editing Book</h1>
+    	<div class="col-md-3"></div>
+	   	<div class="col-md-6">
+				<h1>Editing Book</h1>
 
-			<!--Alert-->
-			<%= render "books/error_messages", book: @book %>
+				<!--Alert-->
+				<%= render "books/error_messages", book: @book %>
 
-			<!-- form_for部分 -->
-			<%= form_for(@book) do |f| %>
-				<div>
-				<h5>Title</h5>
-					<%= f.text_field :title %>
-				</div>
-				<div>
-					<h5>Opinion</h5>
+				<!-- form_for部分 -->
+				<%= form_for(@book) do |f| %>
+					<div class="field row">
+						<label for="book_title">Title</label>
+						<%= f.text_field :title %>
+					</div>
+					<div class="field row">
+						<label for="book_opinion">Opinion</label>
 						<%= f.text_area :body %>
-				</div>
-				<div><%= f.submit "Update Book" %></div>
-				<h4>
-					<%= link_to "Show", book_path(@book.id) %>
-					|
-					<%= link_to "Back", books_path %>
-				</h4>
-			<% end %>
+					</div>
+					<div class="actions row">
+						<%= f.submit "Update Book" %>
+					</div>
+					<h4>
+						<%= link_to "Show", book_path(@book.id) %>
+						|
+						<%= link_to "Back", books_path %>
+					</h4>
+				<% end %>
+			</div>
+			<div class="col-md-3"></div>		
 		</div>
 	</div>
 </div>
