--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,29 +19,45 @@
           <ul class="nav navbar-nav navbar-right">
             <% if user_signed_in? %>
             <li>
-            <%= link_to "Home", user_path(current_user.id) %>
+              <%= link_to user_path(current_user.id) do %>
+                <i class="glyphicon glyphicon-home"> Home</i>
+              <% end %>
             </li>
             <li>
-              <%= link_to "Users", users_path %>
+              <%= link_to users_path do %>
+                <i class="glyphicon glyphicon-user"> Users</i>
+              <% end %>
             </li>
             <li>
-              <%= link_to "Books", books_path %>
+              <%= link_to books_path do %>
+                <i class="glyphicon glyphicon-book"> Books</i>
+              <% end %>
             </li>
             <li>
-              <%= link_to "logout", destroy_user_session_path, method: :delete %>
+              <%= link_to destroy_user_session_path, method: :delete do %>
+                <i class="glyphicon glyphicon-log-out"> logout</i>
+              <% end %>
             </li>
             <% else %>
               <li>
-                <%= link_to "Home", root_path %>
+                <%= link_to root_path do %>
+                  <i class="glyphicon glyphicon-home"> Home</i>
+                <% end %>
               </li>
               <li>
-                <%= link_to "About", home_about_path %>
+                <%= link_to home_about_path do %>
+                  <i class="glyphicon glyphicon-link about"> About</i>
+                <% end %>
               </li>
               <li>
-                <%= link_to "Sign up", new_user_registration_path %>
+                <%= link_to new_user_registration_path do %>
+                  <i class="glyphicon glyphicon-edit sign_up"> Sign up</i>
+                <% end %>
               </li>
               <li>
-                <%= link_to "login", new_user_session_path %>
+                <%= link_to new_user_session_path do %>
+                  <i class="glyphicon glyphicon-log-in"> login</i>
+                <% end %>
               </li>
             <% end %>
           </ul>
