--- a/app/views/users/_list-u-show.html.erb
+++ b/app/views/users/_list-u-show.html.erb
@@ -13,5 +13,7 @@
 	</tbody>
 </table>
 <div class="row">
-	<p><%= link_to "プロフィール編集", edit_user_path(current_user), class: "pull-right" %></p>
+	<%= link_to edit_user_path(current_user) do %>
+		<i class="col-xs-12 btn btn-default glyphicon glyphicon-wrench"></i>
+	<% end %>
 </div>
